# PHY607

assign1/: do_full_backup
assign1/src/: c.c  fortran.f  go.go  python.py  rust.rs
assign2/: cow.py  position_nodrag.out  pseudo.txt
assignNbody/: pseudo.txt
assignOpti/: optimize.py  optimize3.py
proj1/: 250916_exer.py  README.txt  proj1.py  test_proj1.py
proj1/class_exercises/: 250916_exer.py
proj2/: README.txt  analysisClass.py  bodyClass.py  main.py  nbody.toml  pyproject.toml  systemClass.py
proj2/nbodyPackage/: README.txt  __init__.py  analysisClass.py  main.py  systemClass.py
proj2/plts/: t3.py  tempanalysis.py
proj3/: README.txt  analysisClass.py  ising.py  isingClass.py  main.py  pyproject.toml
proj3/isingPackage/: README.txt  isingClass.py  main.py
proj4/: animation_example.py  heat_conduction_1d.py  test.py  tt.py  tt_incomplete.py  tutorial.py  tutorial_solutions.py
