[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isingPackage"
version = "0.0.2"
description = "An ising model simulation for PHY607 project 3"
readme = "isingPackage/README.txt"
requires-python = ">=3.7"
authors = [
  { name="Will Martin", email="wamartin@syr.edu" },
  { name="Jada Garofalo", email="jagarofa@syr.edu" },
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "emcee",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
ising-run = "isingPackage.main:main"

[tool.setuptools]
packages = ["isingPackage"]

